--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-handlebars": "^3.0.0",
     "forever": "^0.15.1",
     "handlebars": "^4.0.5",
+    "latest-version": "^2.0.0",
     "mongoose": "^4.4.3",
     "morgan": "~1.6.1",
     "serve-favicon": "^2.3.0"
