--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
   ],
   "author": "Matthew Ailes",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vidarc/Website.git"
+  },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.13.3",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
