--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "url": "https://github.com/vidarc/Website.git"
   },
   "dependencies": {
-    "body-parser": "^1.13.3",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "express-handlebars": "^3.0.0",
-    "forever": "^0.15.1",
-    "handlebars": "^4.0.5",
-    "latest-version": "^2.0.0",
-    "mongoose": "^4.4.3",
-    "morgan": "~1.6.1",
-    "serve-favicon": "^2.3.0"
+    "body-parser": ">=1.13.3",
+    "cookie-parser": ">=1.3.5",
+    "debug": ">=2.2.0",
+    "express": ">=4.13.1",
+    "express-handlebars": ">=3.0.0",
+    "forever": ">=0.15.1",
+    "handlebars": ">=4.0.5",
+    "latest-version": ">=2.0.0",
+    "mongoose": ">=4.4.3",
+    "morgan": ">=1.6.1",
+    "serve-favicon": ">=2.3.0"
   }
 }
