--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "mongoose": ">=4.4.3",
     "morgan": ">=1.6.1",
     "serve-favicon": ">=2.3.0"
+  },
+  "devDependencies": {
+    "gulp": ">=3.9.1"
   }
 }
