--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "body-parser": ">=1.13.3",
+    "compression": "^1.6.1",
     "cookie-parser": ">=1.3.5",
     "debug": ">=2.2.0",
     "express": ">=4.13.1",
@@ -31,7 +32,9 @@
     "latest-version": ">=2.0.0",
     "mongoose": ">=4.4.3",
     "morgan": ">=1.6.1",
-    "serve-favicon": ">=2.3.0"
+    "request": ">=2.69.0",
+    "serve-favicon": ">=2.3.0",
+    "shortid": "^2.2.4"
   },
   "devDependencies": {
     "gulp": ">=3.9.1"
