--- a/package.json
+++ b/package.json
@@ -21,23 +21,23 @@
     "url": "https://github.com/vidarc/Website.git"
   },
   "dependencies": {
-    "body-parser": ">=1.13.3",
+    "body-parser": "^1.13.3",
     "compression": "^1.6.1",
-    "cookie-parser": ">=1.3.5",
-    "debug": ">=2.2.0",
-    "express": ">=4.13.1",
-    "express-handlebars": ">=3.0.0",
-    "forever": ">=0.15.1",
+    "cookie-parser": "^1.3.5",
+    "debug": "^2.2.0",
+    "express": "^4.13.1",
+    "express-handlebars": "^3.0.0",
+    "forever": "^0.15.1",
     "handlebars": "^4.0.5",
-    "latest-version": ">=2.0.0",
-    "mongoose": ">=4.4.3",
-    "morgan": ">=1.6.1",
+    "latest-version": "^2.0.0",
+    "mongoose": "^4.4.3",
+    "morgan": "^1.6.1",
     "nodemailer": "^2.3.0",
-    "request": ">=2.69.0",
-    "serve-favicon": ">=2.3.0",
+    "request": "^2.69.0",
+    "serve-favicon": "^2.3.0",
     "shortid": "^2.2.4"
   },
   "devDependencies": {
-    "gulp": ">=3.9.1"
+    "gulp": "^3.9.1"
   }
 }
