https stuff added for lets encrypt

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "forever": "^0.15.1",
     "handlebars": "^4.0.5",
     "latest-version": "^2.0.0",
+    "letsencrypt-express": "^2.0.3",
     "mongoose": "^4.4.3",
     "morgan": "^1.6.1",
     "nodemailer": "^2.3.0",
