--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "express": "^4.14.0",
     "react": "^15.3.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.3.2"
   },
   "scripts": {
