--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "babel": "babel server.js -o compiled-server.js",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf build && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
