change to semantic and auth0 further worked on

--- a/semantic/src/theme.config
+++ b/semantic/src/theme.config
@@ -32,7 +32,7 @@
 @input      : 'default';
 @label      : 'default';
 @list       : 'default';
-@loader     : 'default';
+@loader     : 'duo';
 @rail       : 'default';
 @reveal     : 'default';
 @segment    : 'default';
@@ -43,19 +43,19 @@
 @form       : 'default';
 @grid       : 'default';
 @menu       : 'default';
-@message    : 'default';
+@message    : 'gmail';
 @table      : 'default';
 
 /* Modules */
 @accordion  : 'default';
-@checkbox   : 'default';
+@checkbox   : 'colored';
 @dimmer     : 'default';
 @dropdown   : 'default';
 @embed      : 'default';
 @modal      : 'default';
 @nag        : 'default';
 @popup      : 'default';
-@progress   : 'default';
+@progress   : 'striped';
 @rating     : 'default';
 @search     : 'default';
 @shape      : 'default';
@@ -66,8 +66,8 @@
 
 /* Views */
 @ad         : 'default';
-@card       : 'default';
-@comment    : 'default';
+@card       : 'instagram';
+@comment    : 'chubby';
 @feed       : 'timeline';
 @item       : 'default';
 @statistic  : 'default';
