--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "semantic-ui": "^2.2.6"
   },
   "dependencies": {
-    "auth0-lock": "^10.7.2",
+    "auth0-js": "^7.5.0",
     "body-parser": "^1.15.2",
     "colors": "^1.1.2",
     "express": "^4.14.0",
