--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "babel-cli": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
     "babili": "^0.0.9",
-    "react-scripts": "0.7.0",
+    "flow-bin": "^0.37.0",
+    "react-scripts": "^0.8.4",
     "semantic-ui": "^2.2.6"
   },
   "dependencies": {
@@ -21,12 +22,14 @@
     "colors": "^1.1.2",
     "express": "^4.14.0",
     "jwt-decode": "^2.1.0",
+    "markdown-it": "^8.2.1",
+    "moment": "^2.17.1",
     "mongodb": "^2.2.12",
     "morgan": "^1.7.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
-    "semantic-ui-react": "^0.61.4"
+    "semantic-ui-react": "^0.62.1"
   },
   "scripts": {
     "babel": "babel server.js -o compiled-server.js",
