--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Website",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "babel": {
     "presets": [
       "latest",
@@ -36,6 +37,7 @@
     "start": "react-scripts start",
     "build": "rm -rf build && react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "flow": "flow"
   }
 }
