--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
-    "semantic-ui-react": "^0.62.1"
+    "semantic-ui-react": "^0.62.1",
+    "webpack": "^1.14.0"
   },
   "scripts": {
-    "babel": "babel server.js -o compiled-server.js",
+    "babel": "babel server.js -o server.bundle.js",
     "start": "react-scripts start",
     "build": "rm -rf build && react-scripts build",
     "test": "react-scripts test --env=jsdom",
