--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "webpack": "^1.14.0"
   },
   "scripts": {
-    "babel": "babel server.js -o server.bundle.js",
     "start": "react-scripts start",
-    "build": "rm -rf build && react-scripts build",
+    "build": "react-scripts build",
+    "build-server": "webpack --config webpack.config.server.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "flow": "flow"
