--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "colors": "^1.1.2",
+    "compression": "^1.6.2",
     "express": "^4.14.0",
     "jwt-decode": "^2.1.0",
     "markdown-it": "^8.2.1",
