--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "semantic-ui": "^2.2.6"
   },
   "dependencies": {
-    "auth0-js": "^7.5.0",
     "body-parser": "^1.15.2",
     "colors": "^1.1.2",
+    "compression": "^1.6.2",
     "express": "^4.14.0",
     "jwt-decode": "^2.1.0",
     "markdown-it": "^8.2.1",
@@ -34,9 +34,9 @@
     "webpack": "^1.14.0"
   },
   "scripts": {
-    "babel": "babel server.js -o server.bundle.js",
     "start": "react-scripts start",
-    "build": "rm -rf build && react-scripts build",
+    "build": "react-scripts build",
+    "build-server": "webpack --config webpack.config.server.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "flow": "flow"
