--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
-    "babili": "^0.0.9",
-    "flow-bin": "^0.37.0",
+    "babili": "^0.0.10",
+    "flow-bin": "^0.38.0",
     "react-scripts": "^0.8.4",
     "semantic-ui": "^2.2.6"
   },
@@ -29,14 +29,14 @@
     "morgan": "^1.7.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.0",
-    "semantic-ui-react": "^0.62.1",
-    "webpack": "^1.14.0"
+    "react-router": "^3.0.2",
+    "semantic-ui-react": "^0.64.5",
+    "webpack": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build-server": "webpack --config webpack.config.server.js",
+    "build-server": "webpack --config webpack.config.server.js --progress --colors",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "flow": "flow"
