--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "morgan": "^1.7.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "redux": "^3.6.0",
     "semantic-ui-react": "^0.64.5",
     "webpack": "^2.2.1"
   },
