--- a/package.json
+++ b/package.json
@@ -3,18 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:4000",
-  "babel": {
-    "presets": [
-      "latest",
-      "babili"
-    ]
-  },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-latest": "^6.16.0",
-    "babili": "^0.0.10",
-    "flow-bin": "^0.38.0",
-    "react-scripts": "^0.8.4",
+    "@kadira/storybook": "^2.21.0",
+    "flow-bin": "^0.41.0",
+    "react-scripts": "^0.9.5",
     "semantic-ui": "^2.2.6"
   },
   "dependencies": {
@@ -29,8 +21,11 @@
     "morgan": "^1.7.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.2",
-    "semantic-ui-react": "^0.64.5",
+    "react-redux": "^5.0.2",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
+    "redux": "^3.6.0",
+    "semantic-ui-react": "^0.67.0",
     "webpack": "^2.2.1"
   },
   "scripts": {
@@ -39,6 +34,8 @@
     "build-server": "webpack --config webpack.config.server.js --progress --colors",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "flow": "flow"
+    "flow": "flow",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   }
 }
