--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:4000",
+  "babel": {
+    "presets": [
+      "latest"
+    ]
+  },
   "devDependencies": {
     "@kadira/storybook": "^2.21.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
     "flow-bin": "^0.41.0",
     "react-scripts": "^0.9.5",
     "semantic-ui": "^2.2.6"
@@ -22,7 +30,6 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.2",
-    "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
     "semantic-ui-react": "^0.67.0",
