--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
-    "flow-bin": "^0.41.0",
+    "flow-bin": "^0.42.0",
     "react-scripts": "^0.9.5",
     "semantic-ui": "^2.2.6"
   },
@@ -22,6 +22,7 @@
     "colors": "^1.1.2",
     "compression": "^1.6.2",
     "express": "^4.14.0",
+    "handlebars": "^4.0.6",
     "jwt-decode": "^2.1.0",
     "markdown-it": "^8.2.1",
     "moment": "^2.17.1",
