--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.2",
+    "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
     "semantic-ui-react": "^0.67.0",
@@ -41,6 +42,7 @@
     "build": "react-scripts build",
     "build-server": "webpack --config webpack.config.server.js --progress --colors",
     "test": "react-scripts test --env=jsdom",
+    "coverage": "react-scripts test --env=jsdom --coverage --collectCoverageFrom=src/**/*.js --collectCoverageFrom=!src/style/semantic/**/*.js --collectCoverageFrom=!src/stories/*.js",
     "eject": "react-scripts eject",
     "flow": "flow",
     "storybook": "start-storybook -p 9009 -s public",
