--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.7.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-grecaptcha": "^1.1.6",
     "react-redux": "^5.0.2",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
