--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ cache:
   directories:
   - node_modules
 script:
-- npm test
-- npm run build
-- npm run build-server
+- yarn test &&
+  yarn build &&
+  yarn build-server
 deploy:
   skip_cleanup: true
   provider: script
