--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.17.1",
     "mongodb": "^2.2.12",
     "morgan": "^1.7.0",
+    "node-fetch": "^1.6.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-grecaptcha": "^1.1.6",
