--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
-    "css-loader": "^0.28.0",
     "flow-bin": "^0.42.0",
     "react-scripts": "^0.9.5",
-    "semantic-ui": "^2.2.6",
-    "style-loader": "^0.16.1"
+    "semantic-ui": "^2.2.6"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
