--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "flow-bin": "^0.43.1",
-    "react-scripts": "^0.9.5",
+    "react-scripts": "0.7.0",
     "semantic-ui": "^2.2.6"
   },
   "dependencies": {
