--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "flow-bin": "^0.43.1",
-    "react-scripts": "0.7.0",
-    "semantic-ui": "^2.2.6"
+    "react-scripts": "^0.9.5",
+    "semantic-ui": "^2.2.6",
+    "webpack": "^2.3.3"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -36,8 +37,7 @@
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
-    "semantic-ui-react": "^0.67.0",
-    "webpack": "^2.2.1"
+    "semantic-ui-react": "^0.67.0"
   },
   "scripts": {
     "start": "react-scripts start",
