--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ before_script:
 branches:
   only:
   - master
+cache:
+  yarn: true
+  directories:
+  - /node_modules/
 script:
 - yarn test &&
   yarn build &&
