--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ cache:
   - /node_modules/
 script:
 - yarn test &&
+  yarn add webpack@1.14.0 &&
   yarn build &&
+  yarn upgrade webpack &&
   yarn build-server
 deploy:
   skip_cleanup: true
