--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "flow-bin": "^0.43.1",
     "react-scripts": "^0.9.5",
     "semantic-ui": "^2.2.6",
-    "webpack": "^2.3.3"
+    "webpack": "1.14.0"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -30,6 +35,7 @@
     "mongodb": "^2.2.12",
     "morgan": "^1.7.0",
     "node-fetch": "^1.6.3",
+    "prop-types": "^15.5.4",
     "react": "^15.5.3",
     "react-dom": "^15.4.1",
     "react-grecaptcha": "^1.1.6",
