--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "flow-bin": "^0.43.1",
     "react-scripts": "^0.9.5",
     "semantic-ui": "^2.2.6",
-    "webpack": "1.14.0"
+    "webpack": "^1.14.0"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
