--- a/package.json
+++ b/package.json
@@ -35,15 +35,15 @@
     "mongodb": "^2.2.12",
     "morgan": "^1.7.0",
     "node-fetch": "^1.6.3",
+    "nodemailer": "^4.0.1",
     "prop-types": "^15.5.4",
     "react": "^15.5.3",
     "react-dom": "^15.4.1",
-    "react-grecaptcha": "^1.1.6",
-    "react-redux": "^5.0.2",
+    "react-redux": "^5.0.4",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
-    "semantic-ui-react": "^0.67.0"
+    "semantic-ui-react": "^0.68.0"
   },
   "scripts": {
     "start": "react-scripts start",
