--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
   },
   "devDependencies": {
     "@kadira/storybook": "^2.21.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
-    "eslint": "^3.19.0",
+    "eslint": "^4.6.1",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.0.1",
-    "flow-bin": "^0.48.0",
+    "flow-bin": "^0.54.1",
     "react-scripts": "^1.0.1",
     "react-test-renderer": "^15.5.4",
-    "webpack": "^2.5.1"
+    "webpack": "^3.5.6"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -44,7 +45,7 @@
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
     "semantic-ui": "^2.2.10",
-    "semantic-ui-react": "^0.71.2"
+    "semantic-ui-react": "^0.73.0"
   },
   "scripts": {
     "start": "react-scripts start",
