--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "babel": {
-    "presets": [
-      "latest"
-    ]
+    "presets": ["latest"]
   },
   "devDependencies": {
-    "@kadira/storybook": "^2.21.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
@@ -18,10 +15,10 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.0.1",
-    "flow-bin": "^0.54.1",
+    "flow-bin": "^0.55.0",
     "react-scripts": "^1.0.1",
-    "react-test-renderer": "^15.5.4",
-    "webpack": "^3.5.6"
+    "react-test-renderer": "^16.0.0",
+    "webpack": "3.6.0"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -38,24 +35,23 @@
     "node-fetch": "^1.6.3",
     "nodemailer": "^4.0.1",
     "prop-types": "^15.5.4",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
     "semantic-ui": "^2.2.10",
-    "semantic-ui-react": "^0.73.0"
+    "semantic-ui-react": "^0.74.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build-server": "webpack --config webpack.config.server.js --progress --colors",
     "test": "react-scripts test --env=jsdom",
-    "coverage": "react-scripts test --env=jsdom --coverage --collectCoverageFrom=src/**/*.js --collectCoverageFrom=!src/style/semantic/**/*.js --collectCoverageFrom=!src/stories/*.js",
+    "coverage":
+      "react-scripts test --env=jsdom --coverage --collectCoverageFrom=src/**/*.js --collectCoverageFrom=!src/style/semantic/**/*.js --collectCoverageFrom=!src/stories/*.js",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public",
     "flow": "flow"
   }
 }
