--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "babel": {
-    "presets": ["latest"]
+    "presets": [
+      "latest"
+    ]
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "eslint": "^4.6.1",
@@ -49,8 +53,7 @@
     "build": "react-scripts build",
     "build-server": "webpack --config webpack.config.server.js --progress --colors",
     "test": "react-scripts test --env=jsdom",
-    "coverage":
-      "react-scripts test --env=jsdom --coverage --collectCoverageFrom=src/**/*.js --collectCoverageFrom=!src/style/semantic/**/*.js --collectCoverageFrom=!src/stories/*.js",
+    "coverage": "react-scripts test --env=jsdom --coverage --collectCoverageFrom=src/**/*.js --collectCoverageFrom=!src/style/semantic/**/*.js --collectCoverageFrom=!src/stories/*.js",
     "eject": "react-scripts eject",
     "flow": "flow"
   }
