--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "semantic-ui": "^2.2.10",
     "semantic-ui-react": "^0.74.2"
   },
