--- a/package.json
+++ b/package.json
@@ -7,6 +7,15 @@
       "latest"
     ]
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "build-server": "webpack --config webpack.config.server.js --progress --colors",
+    "test": "react-scripts test --env=jsdom",
+    "coverage": "react-scripts test --env=jsdom --coverage --collectCoverageFrom=src/**/*.js --collectCoverageFrom=!src/style/semantic/**/*.js --collectCoverageFrom=!src/stories/*.js",
+    "eject": "react-scripts eject",
+    "flow": "flow"
+  },
   "devDependencies": {
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
@@ -15,13 +24,15 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "eslint": "^4.6.1",
-    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-airbnb": "^16.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.0.1",
-    "flow-bin": "^0.55.0",
+    "flow-bin": "^0.56.0",
+    "nock": "^9.0.22",
     "react-scripts": "^1.0.1",
     "react-test-renderer": "^16.0.0",
+    "redux-mock-store": "^1.3.0",
     "webpack": "3.6.0"
   },
   "dependencies": {
@@ -48,14 +59,5 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui": "^2.2.10",
     "semantic-ui-react": "^0.74.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build-server": "webpack --config webpack.config.server.js --progress --colors",
-    "test": "react-scripts test --env=jsdom",
-    "coverage": "react-scripts test --env=jsdom --coverage --collectCoverageFrom=src/**/*.js --collectCoverageFrom=!src/style/semantic/**/*.js --collectCoverageFrom=!src/stories/*.js",
-    "eject": "react-scripts eject",
-    "flow": "flow"
   }
 }
