--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "babel": {
-    "presets": [
-      "latest"
-    ]
+    "presets": ["latest"]
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build-server": "webpack --config webpack.config.server.js --progress --colors",
-    "test": "react-scripts test --env=jsdom",
-    "coverage": "react-scripts test --env=jsdom --coverage --collectCoverageFrom=src/**/*.js --collectCoverageFrom=!src/style/semantic/**/*.js --collectCoverageFrom=!src/stories/*.js",
+    "test": "react-scripts test --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
+    "coverage": "react-scripts test --env=jsdom --coverage --setupFiles raf/polyfill --setupFiles whatwg-fetch",
     "eject": "react-scripts eject",
     "flow": "flow"
+  },
+  "jest": {
+    "collectCoverageFrom": ["src/**/*.js", "!src/style/semantic/**/*.js", "!src/stories/*.js"]
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
@@ -30,10 +31,12 @@
     "eslint-plugin-react": "^7.0.1",
     "flow-bin": "^0.56.0",
     "nock": "^9.0.22",
+    "raf": "^3.4.0",
     "react-scripts": "^1.0.1",
     "react-test-renderer": "^16.0.0",
     "redux-mock-store": "^1.3.0",
-    "webpack": "3.6.0"
+    "webpack": "3.6.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
