--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "babel": {
-    "presets": ["latest"]
+    "presets": [
+      "latest"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,7 +17,11 @@
     "flow": "flow"
   },
   "jest": {
-    "collectCoverageFrom": ["src/**/*.js", "!src/style/semantic/**/*.js", "!src/stories/*.js"]
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/style/semantic/**/*.js",
+      "!src/stories/*.js"
+    ]
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
@@ -29,13 +35,13 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.0.1",
-    "flow-bin": "^0.56.0",
+    "flow-bin": "^0.58.0",
     "nock": "^9.0.22",
     "raf": "^3.4.0",
     "react-scripts": "^1.0.1",
     "react-test-renderer": "^16.0.0",
     "redux-mock-store": "^1.3.0",
-    "webpack": "3.6.0",
+    "webpack": "3.8.1",
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
@@ -61,6 +67,6 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui": "^2.2.10",
-    "semantic-ui-react": "^0.74.2"
+    "semantic-ui-react": "^0.75.1"
   }
 }
