--- a/package.json
+++ b/package.json
@@ -60,11 +60,14 @@
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
+    "apollo-client": "^2.1.0",
     "body-parser": "^1.15.2",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
     "dotenv": "^5.0.0",
     "express": "^4.14.0",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
     "handlebars": "^4.0.6",
     "jwt-decode": "^2.1.0",
     "markdown-it": "^8.2.1",
@@ -75,6 +78,7 @@
     "nodemailer": "^4.0.1",
     "prop-types": "^15.5.4",
     "react": "^16.0.0",
+    "react-apollo": "^2.0.1",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.0.0",
