--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.2",
     "apollo-client": "^2.1.0",
+    "apollo-link-http": "^1.3.0",
     "body-parser": "^1.15.2",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
