--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build-server": "webpack --config webpack.config.server.js --progress --colors",
+    "watch-server": "webpack --config webpack.config.server.js --progress --colors --watch",
     "build-semantic": "gulp --gulpfile ./semantic/gulpfile.js build",
     "test": "react-scripts test --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
     "coverage": "yarn coverage:run && yarn coverage:submit && yarn coverage:cleanup",
@@ -28,15 +29,8 @@
     "flow": "flow"
   },
   "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.js",
-      "!src/style/semantic/**/*.js",
-      "!src/stories/*.js"
-    ],
-    "coverageReporters": [
-      "text",
-      "lcov"
-    ]
+    "collectCoverageFrom": ["src/**/*.js", "!src/style/semantic/**/*.js", "!src/stories/*.js"],
+    "coverageReporters": ["text", "lcov"]
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
@@ -51,6 +45,7 @@
     "eslint-plugin-react": "^7.0.1",
     "flow-bin": "^0.66.0",
     "nock": "^9.0.22",
+    "nodemon-webpack-plugin": "^0.1.6",
     "raf": "^3.4.0",
     "react-scripts": "^1.0.1",
     "react-test-renderer": "^16.0.0",
@@ -63,13 +58,15 @@
     "apollo-cache-inmemory": "^1.1.2",
     "apollo-client": "^2.1.0",
     "apollo-link-http": "^1.3.0",
+    "apollo-server-express": "^1.3.2",
     "body-parser": "^1.15.2",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
     "dotenv": "^5.0.0",
     "express": "^4.14.0",
-    "graphql": "^0.11.7",
+    "graphql": "^0.12.3",
     "graphql-tag": "^2.5.0",
+    "graphql-tools": "^2.14.1",
     "handlebars": "^4.0.6",
     "jwt-decode": "^2.1.0",
     "markdown-it": "^8.2.1",
