--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-react": "^0.78.2"
+    "semantic-ui-react": "^0.77.1",
+    "winston": "^3.0.0-rc1"
   }
 }
