--- a/.eslintrc
+++ b/.eslintrc
@@ -6,10 +6,11 @@
     "jest": true,
   },
   "rules": {
-    "semi": [ERROR, "never"],
+    "function-paren-newline": ["error", "consistent"],
+    "jsx-quotes": ["error", "prefer-single"],
+    "max-len": ["error", 120],
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    'jsx-quotes': ['error', 'prefer-single'],
-    'max-len': ['error', 120],
-    'no-underscore-dangle': ["error", { "allow": ["_id"] }]
+    "semi": [ERROR, "never"],
   }
 }
