--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
+language: node_js
+node_js:
+- node
+cache:
+  yarn: true
+  directories:
+  - /node_modules/
+script:
+- yarn test &&
+  yarn build &&
+  yarn build-server
 deploy:
   provider: firebase
   token:
