--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ cache:
   - /node_modules/
 script:
 - yarn test &&
-  yarn build &&
-  yarn build-server
+  yarn build
 deploy:
   provider: firebase
   on:
