--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,8 @@
 {
-  "functions": {
-    "predeploy": [
-      "npm --prefix $RESOURCE_DIR run lint"
-    ]
-  },
+  "functions": {},
   "hosting": {
     "public": "build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
