need to install the packages before deploying

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ cache:
 script:
 - yarn test &&
   yarn build
+before_deploy:
+- cd functions &&
+  yarn install &&
+  cd -
 deploy:
   provider: firebase
   on:
