--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "babel": {
+    "plugins": ["transform-react-jsx", "syntax-dynamic-import"],
     "presets": [
       [
         "env",
@@ -16,10 +17,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build-server": "webpack --config webpack.config.server.js --progress --colors",
-    "watch-server": "webpack --config webpack.config.server.js --progress --colors --watch",
-    "build-semantic": "gulp --gulpfile ./semantic/gulpfile.js build",
+    "build": "yarn build:app && yarn build:server && yarn copy:public:entry",
+    "build:app": "react-scripts build",
+    "build:server": "webpack --config webpack.config.server.js --progress --colors",
+    "build:semantic": "gulp --gulpfile ./semantic/gulpfile.js build",
+    "copy:public:entry": "cp build/index.html functions/index.html",
+    "watch:server": "webpack --config webpack.config.server.js --progress --colors --watch",
     "test": "react-scripts test --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
     "coverage": "yarn coverage:run && yarn coverage:submit && yarn coverage:cleanup",
     "coverage:run": "react-scripts test --env=jsdom --coverage --setupFiles raf/polyfill --setupFiles whatwg-fetch",
@@ -34,6 +37,8 @@
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.23.0",
@@ -53,6 +58,7 @@
     "redux-mock-store": "^1.3.0",
     "semantic-ui": "^2.2.13",
     "webpack": "3.8.1",
+    "webpack-node-externals": "^1.6.0",
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
@@ -65,17 +71,11 @@
     "compression": "^1.6.2",
     "dotenv": "^5.0.0",
     "express": "^4.14.0",
+    "firebase-functions": "^0.8.1",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.5.0",
     "graphql-tools": "^2.14.1",
-    "handlebars": "^4.0.6",
-    "jwt-decode": "^2.1.0",
-    "markdown-it": "^8.2.1",
-    "moment": "^2.17.1",
-    "mongodb": "^3.0.3",
-    "morgan": "^1.7.0",
     "node-fetch": "^2.0.0",
-    "nodemailer": "^4.0.1",
     "prop-types": "^15.5.4",
     "react": "^16.0.0",
     "react-apollo": "^2.0.1",
