--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "dotenv": "^5.0.0",
     "express": "^4.14.0",
     "firebase-functions": "^0.8.1",
-    "graphql": "^0.12.3",
+    "graphql": "^0.13.1",
     "graphql-tag": "^2.5.0",
     "graphql-tools": "^2.14.1",
     "node-fetch": "^2.0.0",
@@ -92,10 +92,11 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.0.0",
+    "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-react": "^0.77.1",
+    "semantic-ui-react": "^0.78.3",
     "winston": "^3.0.0-rc1"
   }
 }
