--- a/functions/package.json
+++ b/functions/package.json
@@ -9,19 +9,23 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.18.2",
-    "compression": "^1.7.2",
-    "cors": "^2.8.4",
-    "dotenv": "^5.0.1",
-    "express": "^4.16.2",
-    "firebase-admin": "~5.9.1",
+    "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
+    "dotenv": "^5.0.0",
+    "express": "^4.14.0",
+    "firebase-admin": "^5.10.0",
     "firebase-functions": "^0.8.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "node-fetch": "^2.0.0",
+    "prop-types": "^15.5.4",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-loadable": "^5.3.1",
+    "react-redux": "^5.0.4",
+    "react-router": "^4.0.0",
     "react-router-config": "^1.0.0-beta.4",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.0.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.78.3",
     "winston": "^3.0.0-rc1"
   },
