--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "babel": {
-    "plugins": ["transform-react-jsx", "syntax-dynamic-import", "react-loadable/babel"],
+    "plugins": ["transform-react-jsx", "syntax-dynamic-import", "react-loadable/babel", "transform-object-rest-spread"],
     "presets": [
       [
         "env",
@@ -39,6 +39,7 @@
   "devDependencies": {
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -63,23 +64,14 @@
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.1.2",
-    "apollo-client": "^2.1.0",
-    "apollo-link-http": "^1.3.0",
-    "apollo-server-express": "^1.3.2",
     "body-parser": "^1.15.2",
-    "colors": "^1.1.2",
     "compression": "^1.6.2",
     "dotenv": "^5.0.0",
     "express": "^4.14.0",
     "firebase-functions": "^0.8.1",
-    "graphql": "^0.13.1",
-    "graphql-tag": "^2.5.0",
-    "graphql-tools": "^2.14.1",
     "node-fetch": "^2.0.0",
     "prop-types": "^15.5.4",
     "react": "^16.0.0",
-    "react-apollo": "^2.0.1",
     "react-dom": "^16.0.0",
     "react-loadable": "^5.3.1",
     "react-redux": "^5.0.4",
