--- a/functions/package.json
+++ b/functions/package.json
@@ -9,6 +9,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "dotenv": "^5.0.0",
