--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "coverageReporters": ["text", "lcov"]
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
