--- a/package.json
+++ b/package.json
@@ -72,11 +72,15 @@
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
+    "apollo-server-express": "^1.3.2",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
+    "cross-fetch": "^2.1.0",
     "dotenv": "^5.0.0",
     "express": "^4.14.0",
     "firebase-functions": "^1.0.2",
+    "graphql": "^0.13.2",
+    "graphql-tools": "^2.23.1",
     "node-fetch": "^2.0.0",
     "prop-types": "^15.5.4",
     "react": "^16.0.0",
