--- a/package.json
+++ b/package.json
@@ -73,9 +73,11 @@
   },
   "dependencies": {
     "apollo-server-express": "^1.3.2",
+    "apollo-tracing": "^0.1.3",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "cross-fetch": "^2.1.0",
+    "dataloader": "^1.4.0",
     "dotenv": "^5.0.0",
     "express": "^4.14.0",
     "firebase-functions": "^1.0.2",
