--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.4",
     "apollo-server-express": "^1.3.2",
     "apollo-tracing": "^0.1.3",
     "body-parser": "^1.15.2",
@@ -94,6 +95,7 @@
     "node-fetch": "^2.0.0",
     "prop-types": "^15.5.4",
     "react": "^16.0.0",
+    "react-apollo": "^2.1.1",
     "react-dom": "^16.0.0",
     "react-loadable": "^5.3.1",
     "react-redux": "^5.0.4",
