--- a/package.json
+++ b/package.json
@@ -33,22 +33,18 @@
     "serve": "firebase serve",
     "watch:server": "webpack --config webpack.config.server.js --progress --colors --watch",
     "test": "react-scripts test --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
-    "test:debug": "react-scripts --inspect-brk test --runInBand --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
+    "test:debug":
+      "react-scripts --inspect-brk test --runInBand --env=jsdom --setupFiles raf/polyfill --setupFiles whatwg-fetch",
     "coverage": "yarn coverage:run && yarn coverage:cleanup",
     "coverage:run": "react-scripts test --env=jsdom --coverage --setupFiles raf/polyfill --setupFiles whatwg-fetch",
     "coverage:cleanup": "rm -rf ./coverage",
+    "predeploy": "cp package.json functions/package.json && cp yarn.lock functions/yarn.lock",
     "eject": "react-scripts eject",
     "flow": "flow"
   },
   "jest": {
-    "collectCoverageFrom": [
-      "src/client/**/*.js",
-      "!src/client/style/semantic/**/*.js"
-    ],
-    "coverageReporters": [
-      "text",
-      "lcov"
-    ]
+    "collectCoverageFrom": ["src/client/**/*.js", "!src/client/style/semantic/**/*.js"],
+    "coverageReporters": ["text", "lcov"]
   },
   "devDependencies": {
     "apollo-test-utils": "^0.3.2",
