move files one last time and use lerna

--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
   "private": true,
-  "workspaces": ["packages/*"]
+  "workspaces": ["packages/*"],
+  "scripts": {
+    "clean": "yarn clean:build && yarn clean:node_modules",
+    "clean:build": "rm -rf ./packages/*/build",
+    "clean:node_modules": "rm -rf ./node_modules && rm -rf ./packages/*/node_modules",
+    "test": "yarn test:website",
+    "test:website": "cd "
+  }
 }
