--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,33 +2,17 @@
   "name": "@mattailes/api",
   "version": "1.0.0",
   "private": true,
-  "babel": {
-    "plugins": [
-      "transform-react-jsx",
-      "syntax-dynamic-import",
-      "react-loadable/babel",
-      "transform-object-rest-spread",
-      "transform-class-properties"
-    ],
-    "presets": [
-      "flow",
-      [
-        "env",
-        {
-          "targets": {
-            "node": "6.14.0"
-          }
-        }
-      ]
-    ]
-  },
   "scripts": {
-    "build": "webpack --config webpack.config.server.js --progress --colors",
-    "serve": "firebase serve",
-    "watch:server": "webpack --config webpack.config.server.js --progress --colors --watch",
+    "build": "webpack --progress --colors",
+    "watch:server": "webpack --progress --colors --watch",
     "flow": "flow"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-flow": "^6.23.0",
     "eslint": "^4.6.1",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-plugin-flowtype": "^2.46.3",
@@ -36,10 +20,22 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.0.1",
     "flow-bin": "^0.73.0",
-    "webpack": "^3.8.1"
+    "nodemon-webpack-plugin": "^3.0.1",
+    "webpack": "^4.9.1",
+    "webpack-cli": "^2.1.4",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "apollo-server-express": "^1.3.2",
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.2",
+    "dataloader": "^1.4.0",
+    "express": "^4.16.3",
+    "firebase-admin": "^5.12.1",
+    "firebase-functions": "^1.0.3",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
+    "graphql-tools": "^3.0.2",
     "winston": "^3.0.0-rc1"
   }
 }
