--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,23 @@
 language: node_js
 node_js:
 - "lts/*"
-install:
-- yarn global add codecov
-- yarn install
+cache: yarn
+
 branches:
   only:
   - master
   - /^greenkeeper/.*$/
-cache:
-  yarn: true
-  directories:
-  - /node_modules/
+
+install:
+- yarn global add codecov
+- yarn install
+
 script:
-- yarn coverage:run &&
+- lerna run coverage &&
   codecov &&
-  yarn coverage:cleanup &&
-  yarn build
-before_deploy:
-- yarn predeploy &&
-  cd functions &&
-  yarn install &&
-  cd -
+  lerna run coverage:cleanup &&
+  lerna run build
+
 deploy:
   provider: firebase
   on:
