--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -6,5 +6,8 @@
     "emotion": "^9.1.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
+  },
+  "devDependencies": {
+    "eslint": "4.15.0"
   }
 }
