--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -20,7 +20,7 @@
     "coverageReporters": ["text", "lcov"]
   },
   "devDependencies": {
-    "eslint": "^4.6.1",
+    "eslint": "4.15.0",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-plugin-flowtype": "^2.46.3",
     "eslint-plugin-import": "^2.2.0",
