add stream flag to lerna build to see progress

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ install:
 script:
 - lerna run coverage
 - codecov
-- lerna run coverage:cleanup 
-- lerna run build
+- lerna run coverage:cleanup
+- lerna run build --stream
 deploy:
   provider: script
   script: lerna run deploy
