specify local webpack for api build and remove stream flag

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
 - lerna run coverage
 - codecov
 - lerna run coverage:cleanup
-- lerna run build --stream
+- lerna run build
 deploy:
   provider: script
   script: lerna run deploy
