--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -32,6 +32,7 @@
     "webpack-stylish": "0.1.8"
   },
   "dependencies": {
+    "@mattailes/types": "1.0.0",
     "apollo-server-express": "2.0.7",
     "dataloader": "1.4.0",
     "express": "4.16.3",
