--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -37,7 +37,8 @@
     "redux-mock-store": "1.5.3"
   },
   "dependencies": {
-    "@mattailes/common": "1.0.0",
+    "@mattailes/types": "1.0.0",
+    "@mattailes/ui": "1.0.0",
     "apollo-boost": "0.1.16",
     "cross-fetch": "2.2.2",
     "dotenv": "6.0.0",
