🔧 updating flow-typed files

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,5 +9,8 @@
     "emotion": "9.2.9",
     "react": "16.5.0",
     "react-dom": "16.5.0"
+  },
+  "devDependencies": {
+    "flow-bin": "^0.81.0"
   }
 }
