⬆️ upgrading to react scripts 2

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,7 +19,6 @@
     "@babel/preset-flow": "7.0.0",
     "@mattailes/types": "1.0.0",
     "babel-loader": "8.0.2",
-    "eslint": "4.15.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-flowtype": "2.50.0",
     "eslint-plugin-import": "2.14.0",
@@ -27,6 +26,7 @@
     "eslint-plugin-react": "7.11.1",
     "flow-bin": "0.81.0",
     "nodemon-webpack-plugin": "3.0.1",
+    "react-scripts": "2.0.1",
     "webpack": "4.19.0",
     "webpack-cli": "3.1.0",
     "webpack-node-externals": "1.7.2",
