--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "flow": "flow",
-    "build-prod": "webpack index.js --mode=production",
-    "build-dev": "webpack index.js --mode=development"
+    "build-library:prod": "webpack index.js --mode=production --progress --colors",
+    "build-library:dev": "webpack index.js --mode=development --progress --colors"
   },
   "main": "dist/main.js",
   "files": [
