🔧 adding eslint to lint-staged

--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
     "singleQuote": true
   },
   "lint-staged": {
-    "*.{js,jsx,json}": [
+    "*.{js,jsx}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "*.json": [
       "prettier --write",
       "git add"
     ],
     "*.{css,scss,sass}": [
       "prettier --write",
+      "eslint --fix",
       "git add"
     ]
   },
