--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "build": "webpack-cli --progress --colors",
+    "lint": "../../node_modules/.bin/eslint ./src",
     "watch:server": "webpack-cli --progress --colors --watch",
     "flow": "flow",
     "deploy": "firebase deploy --token $FIREBASE_TOKEN"
@@ -19,6 +20,13 @@
     "@babel/preset-flow": "7.0.0",
     "@mattailes/types": "1.0.0",
     "babel-loader": "8.0.4",
+    "eslint": "5.6.1",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-babel": "5.2.1",
+    "eslint-plugin-flowtype": "2.50.3",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "7.11.1",
     "flow-bin": "0.82.0",
     "nodemon-webpack-plugin": "3.0.1",
     "react-scripts": "2.0.4",
