--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "flow": "flow",
     "build-library:prod": "webpack-cli index.js --mode=production --progress --colors",
-    "build-library:dev": "webpack-cli index.js --mode=development --progress --colors"
+    "build-library:dev": "webpack-cli index.js --mode=development --progress --colors",
+    "lint": "../../node_modules/.bin/eslint ./src"
   },
   "main": "dist/main.js",
   "files": [
@@ -23,6 +24,13 @@
     "@babel/preset-env": "7.1.0",
     "@babel/preset-flow": "7.0.0",
     "babel-loader": "8.0.4",
+    "eslint": "5.6.1",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-babel": "5.2.1",
+    "eslint-plugin-flowtype": "2.50.3",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "7.11.1",
     "flow-bin": "0.82.0",
     "react-scripts": "2.0.4",
     "webpack": "^4.20.2",
