--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "clean:build": "rm -rf ./packages/*/build",
     "clean:node_modules": "rm -rf ./node_modules && rm -rf ./packages/*/node_modules",
     "test": "yarn test:website",
-    "test:website": "cd packages/website && yarn test && cd -"
+    "test:website": "cd packages/website && yarn test && cd -",
+    "library": "lerna run build-library:dev",
+    "library:prod": "lerna run build-library:prod",
+    "start": "lerna run start"
   },
   "husky": {
     "hooks": {
