--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "flow": "flow",
-    "build-library:prod": "webpack-cli index.js --mode=production --progress --colors",
-    "build-library:dev": "webpack-cli index.js --mode=development --progress --colors",
+    "build-library:prod": "NODE_ENV=production babel ./src --out-dir es --copy-files --delete-dir-on-start",
+    "build-library:dev": "NODE_ENV=development babel ./src --out-dir es --copy-files --delete-dir-on-start",
     "lint": "../../node_modules/.bin/eslint ./src"
   },
-  "main": "dist/main.js",
+  "main": "es/index.js",
+  "module": "es/index.js",
   "files": [
-    "dist"
+    "es"
   ],
   "peerDependencies": {
     "emotion": "9.2.12",
@@ -18,11 +19,14 @@
     "react-dom": "16.5.2"
   },
   "devDependencies": {
+    "@babel/cli": "7.1.2",
     "@babel/core": "7.1.2",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-transform-runtime": "7.1.0",
     "@babel/polyfill": "7.0.0",
-    "@babel/preset-env": "7.1.0",
-    "@babel/preset-flow": "7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "8.0.4",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-babel": "5.2.1",
