--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "scripts": {
     "flow": "flow",
-    "build-library:prod": "NODE_ENV=production babel ./src --out-dir es --copy-files --delete-dir-on-start",
-    "build-library:dev": "NODE_ENV=development babel ./src --out-dir es --copy-files --delete-dir-on-start",
+    "build-library:prod": "rm -rf ./build && webpack-cli --mode=production --progress --colors",
+    "build-library:dev": "rm -rf ./build && webpack-cli --mode=development --progress --colors",
     "lint": "../../node_modules/.bin/eslint ./src"
   },
-  "main": "es/index.js",
-  "module": "es/index.js",
+  "main": "build/index.js",
   "files": [
     "es"
   ],
@@ -19,7 +18,6 @@
     "react-dom": "16.5.2"
   },
   "devDependencies": {
-    "@babel/cli": "7.1.2",
     "@babel/core": "7.1.2",
     "@babel/plugin-proposal-export-default-from": "7.0.0",
     "@babel/plugin-transform-runtime": "7.1.0",
@@ -38,6 +36,7 @@
     "react-scripts": "2.0.4",
     "webpack": "4.20.2",
     "webpack-cli": "3.1.2",
+    "webpack-node-externals": "^1.7.2",
     "webpack-stylish": "0.1.8"
   }
 }
