--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,9 +29,12 @@
     "@babel/preset-react": "7.0.0",
     "@babel/runtime": "7.1.2",
     "@storybook/addon-actions": "4.0.0-alpha.24",
+    "@storybook/addon-centered": "4.0.0-alpha.24",
     "@storybook/addon-info": "4.0.0-alpha.24",
     "@storybook/addon-links": "4.0.0-alpha.24",
+    "@storybook/addon-options": "4.0.0-alpha.24",
     "@storybook/addons": "4.0.0-alpha.24",
+    "@storybook/components": "4.0.0-alpha.24",
     "@storybook/react": "4.0.0-alpha.24",
     "babel-loader": "8.0.4",
     "babel-plugin-emotion": "^9.2.11",
